Rework of the I18n system
I gathered the strings files into one to get an internationalization job to be done.
Also rewrote the Localisation class, making it as an attribute of Kapotopia instead of a static class

--- a/kapotopia/android/assets/strings/strings_fr.properties
+++ b/kapotopia/android/assets/strings/strings_fr.properties
@@ -152,8 +152,8 @@ depression_descr=La dépression est un trouble mental caractérisé par des épi
 tetanos_descr=Le tétanos est une infection locale provoquée par une bactérie, produisant une neurotoxine ciblant le système nerveux central. Cette toxine est l'un des plus puissants poisons biologiques connus et entraîne la mort dans 20 à 30% des cas.
 cancer_descr=C'est une maladie provoquée par la transformation de cellules qui deviennent anormales et prolifèrent de façon excessive.
 pestebubonique_descr=La peste bubonique est la forme la plus fréquente de peste en milieu naturel, elle est provoquée par la morsure de puces infectées.
-variole_descr=soon
-diabete_descr=soon
-lyme_descr=soon
-conjonctivite_descr=soon
+variole_descr=Bientôt
+diabete_descr=Bientôt
+lyme_descr=Bientôt
+conjonctivite_descr=Bientôt
 mycose_descr=Elle est causée par un champignon pouvant provoquer de vives douleurs au vagin, et chez l'homme causer une inflammation du gland. Elle n'est pas considérée comme une pure maladie sexuellement transmissible.
