Finished translation work for English
Most of the strings has been translated into English.
It will also now be relatively easy to add on new languages.
About STIData, it is now loaded in memory at the start of the game, and only once, it is used both by game1 and STIDex

--- a/kapotopia/android/assets/strings/strings_fr.properties
+++ b/kapotopia/android/assets/strings/strings_fr.properties
@@ -31,26 +31,28 @@ question_button=Question
 score2_label=Score : 
 timer_label=Timer : 
 lives_label=Vies : 
+istattrapees=ISTs attrapées: 
+highscore=Highscore: 
 time_left=Time left : 
-your_score_is=Your score is : 
+your_score_is=Ton score est : 
 high_score_lab_head=New 
 
 dialogIntro1=Bienvenue à Kapotopia !
-dialogIntro2=Ici, tu apprendras des informations importantes sur la sexualité et ses risques afin de mieux t'en protéger. Cela marche comme suit :
-dialogIntro3=Le premier monde contient deux épreuves pour tester tes connaissances à propos des IST : leur noms et leurs symptômes. \nLe deuxième monde t'apprendra les pratiques sexuelles à risques ou non. \nL'IST-dex, quant à lui, est simplement une encylopédie pour tout apprendre sur nos ennemis les IST.
+dialogIntro2=Ici, tu apprendras des informations importantes sur la sexualité et ses risques afin de mieux t'en protéger.
+dialogIntro3=Le premier monde contient deux épreuves pour tester tes connaissances à propos des IST : leur noms et leurs symptômes. \nLe deuxième monde t'apprendra les pratiques sexuelles à risques ou non.\nL'IST-dex, quant à lui, est simplement une encylopédie pour tout apprendre sur nos ennemis les IST.
 
 dialogG1_1=Bonjour toi, je t'attendais ! Je suis mireille, ta ca-pote.
-dialogG1_2=Si tu es ici, c'est que comme moi, tu as des examens à passer. \nCette année, les épreuves se font par deux. Je compte sur toi pour m'aider à réussir!
+dialogG1_2=Si tu es ici, c'est que comme moi, tu as des examens à passer.\nCette année, les épreuves se font par deux. Je compte sur toi pour m'aider à réussir !
 dialogG1_3=Vu que t'es nouveau, j'espère que les épreuves ne seront pas trop dures pour toi. Les instructeurs ont tendance à être un peu brusques...
-dialogG1_4=Oh en parlant du loup, attention le sergent dildo s'approche, on ferait mieux de se taire avant de se faire mettre au trou.
+dialogG1_4=Oh en parlant du loup, attention le sergent Dildo s'approche, on ferait mieux de se taire avant de se faire mettre au trou.
 dialogG1_5=Salutation, recrues. Bienvenue dans la Jungle Infectieuse de Chilly Beachy! Ici, vous allez me montrer vos compétences pour identifier nos ennemis de toujours: les terribles IST !
-dialogG1_6=Ne tournons pas autour du pot, c'est parti pour l'échauffement : un petit footing dans la jungle infectieuse. \nPrenez garde aux ist qui se baladent dans la jungle, n'en laissez aucune s'échapper!
+dialogG1_6=Ne tournons pas autour du pot, c'est parti pour l'échauffement : un petit footing dans la jungle infectieuse.\nPrenez garde aux ist qui se baladent dans la jungle, n'en laissez aucune s'échapper !
 dialogG1_7=Okay les raclures de fond de bidet, montrez-moi ce que vous avez dans le ventre !
-dialogG1_rules_1=Ton but ici est d'identifier rapidement les vraies IST et de les attraper avant qu'elles ne touchent le sol.\nDéplace Mireille sur les différentes routes dans ce but. Tu seras récompensé pour chaque IST attrapée. \nAttention: toutes les créatures tombant des arbres ne sont pas des IST! Tu n'es pas habilité à les attraper, tu perdras donc une vie si tu le fais. \nAu bout de 3 vies perdues, tu recommences l'aventure.\n\nEt si tu trouves l'échauffement trop facile, tu peux toujours essayer la difficulté supérieure.
+dialogG1_rules_1=Ton but ici est d'identifier rapidement les vraies IST et de les attraper avant qu'elles ne touchent le sol.\nDéplace Mireille sur les différentes routes dans ce but. Tu seras récompensé pour chaque IST attrapée.\nAttention: toutes les créatures tombant des arbres ne sont pas des IST! Tu n'es pas habilité à les attraper, tu perdras donc une vie si tu le fais.\nAu bout de 3 vies perdues, tu recommences l'aventure.\n\nEt si tu trouves l'échauffement trop facile, tu peux toujours essayer la difficulté supérieure.
 intro_text=Bien joué ! Malheureusement, tu as oublié d'attraper les ists suivantes :
 
 game2_diag0=Eh beh, ce n'était pas facile, mais j'ai réussi la première épreuve grâce à toi. Passons maintenant à la suivante, à la plage cette fois-ci!
-game2_diag1=Salut! Moi c'est Alix. Au cas où tu ne me reconnaitrais pas, je suis une digue dentaire. Maintenant que tu es au taquet niveau endurance grâce au Sergent Dildo, je t'emène à la plage pour pratique le sport national de Kapotopia, le basket! Et oui, il faut aussi une bonne dose d'agilité pour être une bonne protection certifiée...
+game2_diag1=Salut! Moi c'est Alix. Au cas où tu ne me reconnaîtrais pas, je suis une digue dentaire. Maintenant que tu es au taquet niveau endurance grâce au Sergent Dildo, je t'emmène à la plage pour pratiquer le sport national de Kapotopia, le basket! Eh oui, il faut aussi une bonne dose d'agilité pour être une bonne protection certifiée...
 game2_rules=Le but de cette épreuve et d'apprendre les symptômes de chaque IST. Lance la balle correspondant à une IST dans le panier avec les bons symptômes.\nCommence par sélectionner une balle en la touchant, puis lance la en swippant vers le haut.\nTu peux aussi changer le symptôme présenté en swippant à gauche ou à droite.\nChaque faute t'enlèvera une vie. Si tu n'en as plus, tu devras recommencer la partie.
 game2_badending1=Pas mal!
 game2_badending2=Tu as les bons symptômes pour 
@@ -60,15 +62,16 @@ game2_badending5=Bien essayé!
 game2_badending6=Persévère! Tu peux y arriver.
 game2_goodending1=Félicitation!
 game2_goodending2=Tu as associé tous les bons
-game2_goodending3=symptômes aux bonnes IST!
+game2_goodending3=symptômes aux bonnes ISTs!
 
 game3_diag1=Qu'est ce que cette forêt est dense, c'est un véritable labyrinthe.
 game3_diag2=Oh mais serait-ce un bâtiment que j'aperçois là-bas ?
 game3_diag3=C'est ici ma dernière épreuve? Quel lieu étrange, j'espère que je ne me suis pas perdue, entrons pour vérifier. 
 game3_diag4=Mais, mais... ce lieu est infesté d'IST ! Je me suis trompée d'adresse!
-game3_diag5=Bonjour, je suis Thomas GODIVA. Tu es un préservatif? \nLes IST sont mes amies et nous n'aimons pas les gens dans ton genre par ici. \nTu ferais mieux de déguerpir rapidement, nous avons des épingles pour te régler ton compte!
-game3_instr=Vite, tu dois fuir, sinon tu te feras percer! \nCette porte est verrouillée électroniquement. Pour la déverrouiller, fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\nChaque serrure est associée à une pratique à risque, ou non, tapes-dessus pour l'afficher. \n\nAttention: Seule une serrure marche. Tu dois trouver la pratique non à risque, les autres ne fonctionneront pas!
+game3_diag5=Bonjour, je suis Thomas GODIVA. Tu es un préservatif?\nLes IST sont mes amies et nous n'aimons pas les gens dans ton genre par ici.\nTu ferais mieux de déguerpir rapidement, nous avons des épingles pour te régler ton compte!
+game3_instr=Vite, tu dois fuir, sinon tu te feras percer!\nCette porte est verrouillée électroniquement. Pour la déverrouiller, fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\nChaque serrure est associée à une pratique à risque, ou non, tapes-dessus pour l'afficher. \n\nAttention: Seule une serrure marche. Tu dois trouver la pratique non à risque, les autres ne fonctionneront pas!
 game3_win=Félicitation, tu as réussis à t'enfuir! Tu as donc réussis la dernière épreuve! Eh oui, tout ceci n'était qu'une mise en scène et Thomas Godiva un complice. La maison s'excuse pour la frayeur occasionnée.
+game3_win_tom=Bravo ! Tiens, prends un chocolat pour te réconforter, en espérant que cela t'aides pour la prochaine épreuve.
 game3_loose=Malheureusement tu n'as pas réussi à t'enfuir...
 
 rules_title=REGLES
@@ -86,48 +89,69 @@ q1_question=Mireille color ?
 
 # PRACTICES
 safe1=Se faire tatouer
-safe2=Faire des \nmassages
-safe3=Se faire piquer \npar un moustique
-safe4=Embrasser \nquelqu'un
+safe2=Faire des\nmassages
+safe3=Se faire piquer\npar un moustique
+safe4=Embrasser\nquelqu'un
 safe5=Jouer à kapotopia
-safe6=S'asseoir sur \nune planche de \ntoilette publique
-safe7=Boire dans \nle verre d'un inconnu
-safe8=Se faire \nvacciner
-safe9=Recevoir une transfusion sanguine
+safe6=S'asseoir sur\nune planche de\ntoilette publique
+safe7=Boire dans\nle verre d'un inconnu
+safe8=Se faire\nvacciner
+safe9=Recevoir\nune transfusion sanguine
 
-unsafe1=Une pénétration \nvaginale
-unsafe2=Une pénétration \nanale
-unsafe3=Un frotti-frotta \nd'organes génitaux
-unsafe4=Un échange \nde seringue
+unsafe1=Une pénétration\nvaginale
+unsafe2=Une pénétration\nanale
+unsafe3=Un frotti-frotta\nd'organes génitaux
+unsafe4=Un échange\nde seringue
 unsafe5=Une fellation
-unsafe6=Une caresse \nsexuelle  
+unsafe6=Une caresse\nsexuelle
 unsafe7=Un cunnilingus
 unsafe8=Un anulingus
-unsafe9=Un échange \nde godemichet
-unsafe10=Ejaculation \nfaciale
-unsafe11=Un doigt \ndans le vagin
-unsafe12=Une éjaculation \nsur les organes \ngénitaux
+unsafe9=Un échange\nde godemichet
+unsafe10=Une éjaculation\nfaciale
+unsafe11=Un doigt\ndans le vagin
+unsafe12=Une éjaculation\nsur les organes\ngénitaux
 unsafe13=La position 69
 
 # SYMPTOMS
 hiv_symp=Souvent asymptotique. Dans les autres cas, éruptions cutanées et/ou symptômes ressemblant à ceux de la grippe (fièvre, fatigue, ganglions gonflés, etc.) dans les premières semaines
 c_hepatitis_symp=Fièvre, jaunisse, nausée, douleurs musculaires, fatigue (2 à 4 semaines après contamination)
 hpv_symp=Souvent asymptotique. Dans les autres cas, lésions précancéreuses très souvent indolores et/ou irritations, démangeaisons dues à l'apparition de verrues (appelées condylomes)
-gonorrhea_symp=Ecoulement inhabituel (du pénis ou du vagin), irritation du pénis ou de la vulve, douleurs dans le bas-ventre, sensation de brûlure en urinant, douleur à la gorge et à l'anus.
+gonorrhea_symp=Écoulement inhabituel (du pénis ou du vagin), irritation du pénis ou de la vulve, douleurs dans le bas-ventre, sensation de brûlure en urinant, douleur à la gorge et à l'anus.
 chlamydia_symp=Souvent asymptotique. Dans les autres cas, douleurs en urinant, au bas-ventre/à la gorge/à l'anus, écoulement inhabituel des parties génitales, saignements irréguliers.
 herpes_symp=Cloches sur les organes génitaux ou l'anus, douleur en urinant (Généralement 2 à 20 jours après contamination, parfois quelques années). Très douloureux lors de la primo-infection.
 syphillis_symp=Chancre (ulcère ou plaie creuse) buccal, génital ou anal au stade précoce (peut passer inaperçu) et éruption cutanée.
 trichomonas_symp=Pertes vaginales odorantes et colorées, démangeaisons, sensation de brûlure en urinant. Symptômes fréquents au niveau vaginal (80% des cas) mais asymptotique dans 90% des cas au niveau du pénis.
 chancreMou_symp=Ulcération de la peau avec l'apparition de lésions multiples. Gonflement des ganglions lymphatiques. Généralement beaucoup plus douloureux pour un pénis que pour une vulve.
-mycoplasmaGenitalium_symp=Souvent asymptomatique. Pertes vaginales, saignements intermenstruels ou post-coïtaux pour une vulve. Douleurs en urinant, écoulement, infection de l'urêtre pour un pénis.
+mycoplasmaGenitalium_symp=Souvent asymptomatique. Pertes vaginales, saignements inter-menstruels ou post-coïtaux pour une vulve. Douleurs en urinant, écoulement, infection de l'urètre pour un pénis.
 
 # STI NAMES
-hiv_name=VIH
-c_hepatitis_name=Hépatite C
-hpv_name=Papilloma\nvirus
 gonorrhea_name=Gonorrhée
 chlamydia_name=Chlamydia
-herpes_name=Herpès\ngénitale
+herpes_name=Herpès génitale
+hiv_name=VIH
+hpv_name=Papillomavirus
+syphilis_name=Syphilis
+trichomonas_name=Trichomonas
+a_hepatitis_name=Hépatite A
+b_hepatitis_name=Hépatite B
+c_hepatitis_name=Hépatite C
+chancremou_name=Chancre Mou
+mycoplasma_name=Mycoplasma Genitalium
+gale_name=Gale
+morpion_name=Morpion
+alternariose_name=Alternariose
+froidepisse_name=Froide pisse
+lycanthropie_name=Lycanthropie
+mononucleose_name=Mononucléose
+depression_name=Dépression
+tetanos_name=Tétanos
+cancer_name=Cancer
+pestebubo_name=Peste bubonique
+variole_name=Variole
+diabete_name=Diabète
+lyme_name=Lyme
+conjonctivite_name=Conjonctivite
+mycose_name=Mycose
 
 # STI DESCRIPTIONS
 gonorrhee_descr=Bactérie le plus souvent sans symptômes. Quand elle est présente, on observe des écoulements (pénis ou vagin), des irritations et des brûlures en urinant. Elle mène à la stérilité.
@@ -138,11 +162,11 @@ papillomavirus_descr=Virus le plus souvent sans symptômes, avec parfois des lé
 syphilis_descr=Bactérie pouvant causer des complications articulaires, cardiovasculaires et neurologiques. On la reconnait à cause de chancres buccaux, génital ou analet des éruptions cutanées.
 trichonomas_descr=Parasite causant des pertes vaginales odorantes et colorées. Sans symptômes dans 20% des cas au niveau vaginal, 90% au niveau du pénis. Facilite largement l'apparition d'autres IST.
 hepatiteA_descr=Virus le plus souvent sans symptôme, on en guérit naturellement dans la grande majorité des cas. Les autres évoluent en hépatites fulminantes (40% de mortalité).
-hepatiteB_descr=Virus le plus souvent sans symptômes, il peut causer une affection aiguë. Dans les cas chronique, om cause une maladie du foie, cirrhose, cancer et décès.
+hepatiteB_descr=Virus le plus souvent sans symptômes, il peut causer une affection aiguë. Dans les cas chronique, il cause une maladie du foie, cirrhose, cancer et décès.
 hepatiteC_descr=Virus le plus souvent sans symptômes, elle se soigne naturellement dans une partie des cas, dans les cas chroniques, il y a maladie du foie, cirrhose, cancer et décès.
 chancremou_descr=Maladie causée par la bactérie du bacile de Ducrey, il provoque un chancre ulcéré ainsi que des gonflements de ganglions lymphatiques
 mycoplasmagenitalium_descr=Bactérie peu commune en Belgique, elle provoque l'apparition d'autres maladies infectieuses notamment pour les organes reproducteurs.
-gale_descr=Maladie de la peau causée par un parasite, il creuse des cavités sous la surface de la peau, dont il se nourrit, et y pond ses oeufs. Sans grande gravité, elle est néanmoins très contagieuse.
+gale_descr=Maladie de la peau causée par un parasite, il creuse des cavités sous la surface de la peau, dont il se nourrit, et y pond ses œufs. Sans grande gravité, elle est néanmoins très contagieuse.
 morpion_descr=Insecte parasite qui cible spécifiquement les poils du pubis. Il occasionne de fortes gênes et ses morsures favorisent les infections d'autres IST.
 alternariose_descr=Série de maladies fongiques causant des brûlures à certains types de plantes, comme les tournesols, les tomates et les carottes. Elle peut être considérée comme une IST pour plante.
 froidepisse_descr=La chaude pisse est un synonyme de la gonorhée, en revanche la froide pisse est une maladie imaginaire.
