Fixed #76 - skip buttons for game intros
Added skip button to skip intro scenes. They appear once the player played them already once (it is actually turned on when the player go on the actual game screen).
I also reordered some pictures for bubbles and buttons by renaming them, and organizing them into new folders

--- a/kapotopia/android/assets/strings/strings_fr.properties
+++ b/kapotopia/android/assets/strings/strings_fr.properties
@@ -5,17 +5,18 @@ text_world4=Monde 4
 game1_button=Jungle Infectueuse
 game2_button=Basket Beach
 text_istdex=ISTdex
-
+# Choosing Difficulty Screen
 easy_button=Facile
 medium_button=Moyen
 hard_button=Difficile
 infinite_button=Infini
 
-play_button=Play
-back_button=Back
+play_button=Jouer
+back_button=Retour
 back_menu_button=Retour au menu
 next_button=Suivant
 quit_button_text=Quitter
+skip_button=Passer
 
 success=Bravo !
 fail=GAME OVER
