Addition of cutscene for the start of the game

--- a/kapotopia/android/assets/strings/strings_fr.properties
+++ b/kapotopia/android/assets/strings/strings_fr.properties
@@ -11,6 +11,8 @@ medium_button=Moyen
 hard_button=Difficile
 infinite_button=Infini
 
+showfirstcutscene=Voir l'intro
+
 play_button=Jouer
 back_button=Retour
 back_menu_button=Retour au menu
