--- a/kapotopia/android/assets/strings/strings_fr.properties
+++ b/kapotopia/android/assets/strings/strings_fr.properties
@@ -19,6 +19,8 @@ back_menu_button=Retour au menu
 next_button=Suivant
 quit_button_text=Quitter
 skip_button=Passer
+continue_button=Continuer
+restart_button=Recommencer
 
 success=Bravo !
 fail=GAME OVER
