--- a/kapotopia/android/assets/strings/strings_fr.properties
+++ b/kapotopia/android/assets/strings/strings_fr.properties
@@ -2,8 +2,10 @@ text_world1=Chilly Beachy
 text_world2=Risky Club
 text_world3=Monde 3
 text_world4=Monde 4
-game1_button=Jungle Infectueuse
+game1_button=Jungle Infectieuse
 game2_button=Basket Beach
+game3_button=God'iva Show
+game4_button=Sssneaky
 text_istdex=ISTdex
 # Choosing Difficulty Screen
 easy_button=Facile
@@ -17,11 +19,16 @@ play_button=Jouer
 back_button=Retour
 back_menu_button=Retour au menu
 next_button=Suivant
+previous_button=Retour
 quit_button_text=Quitter
 skip_button=Passer
 continue_button=Continuer
 restart_button=Recommencer
+cancel_button=Annuler
+exit_button=Quitter
+legend_button=Légende
 
+congrats_msg=Félicitations !
 success=Bravo !
 fail=GAME OVER
 pause_label_text=Pause
@@ -36,26 +43,26 @@ question_button=Question
 score2_label=Score : 
 timer_label=Timer : 
 lives_label=Vies : 
-istattrapees=ISTs attrapées: 
-highscore=Highscore: 
-time_left=Time left : 
+istattrapees=IST attrapées: 
+highscore=Record: 
+time_left=Temps restant : 
 your_score_is=Ton score est : 
-high_score_lab_head=New 
+high_score_lab_head=Nouveau 
 # Intro general
 dialogIntro1=Bienvenue à Kapotopia !
 dialogIntro2=Ici, tu apprendras des informations importantes sur la sexualité et ses risques afin de mieux t'en protéger.
 dialogIntro3=Le premier monde contient deux épreuves pour tester tes connaissances à propos des IST : leur noms et leurs symptômes. \nLe deuxième monde t'apprendra les pratiques sexuelles à risques ou non.\nL'IST-dex, quant à lui, est simplement une encylopédie pour tout apprendre sur nos ennemis les IST.
 # Intro Game 1
-dialogG1_1=Bonjour toi, je t'attendais ! Je suis mireille, ta ca-pote.
+dialogG1_1=Bonjour toi, je t'attendais ! Je suis Mireille, ta ca-pote.
 dialogG1_2=Si tu es ici, c'est que comme moi, tu as des examens à passer.\nCette année, les épreuves se font par deux. Je compte sur toi pour m'aider à réussir !
 dialogG1_3=Vu que t'es nouveau, j'espère que les épreuves ne seront pas trop dures pour toi. Les instructeurs ont tendance à être un peu brusques...
 dialogG1_4=Oh en parlant du loup, attention le sergent Dildo s'approche, on ferait mieux de se taire avant de se faire mettre au trou.
 dialogG1_5=Salutation, recrues. Bienvenue dans la Jungle Infectieuse de Chilly Beachy! Ici, vous allez me montrer vos compétences pour identifier nos ennemis de toujours: les terribles IST !
-dialogG1_6=Ne tournons pas autour du pot, c'est parti pour l'échauffement : un petit footing dans la jungle infectieuse.\nPrenez garde aux ist qui se baladent dans la jungle, n'en laissez aucune s'échapper !
+dialogG1_6=Ne tournons pas autour du pot, c'est parti pour l'échauffement : un petit footing dans la jungle infectieuse.\nPrenez garde aux IST qui se baladent dans la jungle, n'en laissez aucune s'échapper !
 dialogG1_7=Okay les raclures de fond de bidet, montrez-moi ce que vous avez dans le ventre !
 dialogG1_rules_1=Ton but ici est d'identifier rapidement les vraies IST et de les attraper avant qu'elles ne touchent le sol.\nDéplace Mireille sur les différentes routes dans ce but. Tu seras récompensé pour chaque IST attrapée.\nAttention: toutes les créatures tombant des arbres ne sont pas des IST! Tu n'es pas habilité à les attraper, tu perdras donc une vie si tu le fais.\nAu bout de 3 vies perdues, tu recommences l'aventure.\n\nEt si tu trouves l'échauffement trop facile, tu peux toujours essayer la difficulté supérieure.
 # Game 1
-intro_text=Bien joué ! Malheureusement, tu as oublié d'attraper les ists suivantes :
+intro_text=Bien joué ! Malheureusement, tu as oublié d'attraper les IST suivantes :
 game1_outro1=Eh beh, ce n'était pas facile, mais j'ai réussi la première épreuve grâce à toi. Passons maintenant à la suivante!
 # Intro Game 2
 game2_diag1=Le sable chaud, un ciel ensoleillé, les mouettes qui virevoltent, des requins mangeurs d'homme, pas de doute nous sommes à la plage !
@@ -71,17 +78,23 @@ game2_badending5=Bien essayé!
 game2_badending6=Persévère! Tu peux y arriver.
 game2_goodending1=Félicitation!
 game2_goodending2=Tu as associé tous les bons
-game2_goodending3=symptômes aux bonnes ISTs!
+game2_goodending3=symptômes aux bonnes IST!
 # Game 3
-game3_diag1=Qu'est ce que cette forêt est dense, c'est un véritable labyrinthe.
+game3_diag1=C'est épuisant tout ce sport, je boirais bien un petit coup.
 game3_diag2=Oh mais serait-ce un bâtiment que j'aperçois là-bas ?
-game3_diag3=C'est ici ma dernière épreuve? Quel lieu étrange, j'espère que je ne me suis pas perdue, entrons pour vérifier. 
+game3_diag3=C'est ici ma dernière épreuve ? Quel lieu étrange, j'espère que je ne me suis pas perdue, entrons pour vérifier. 
 game3_diag4=Mais, mais... ce lieu est infesté d'IST ! Je me suis trompée d'adresse!
 game3_diag5=Bonjour, je suis Thomas GODIVA. Tu es un préservatif?\nLes IST sont mes amies et nous n'aimons pas les gens dans ton genre par ici.\nTu ferais mieux de déguerpir rapidement, nous avons des épingles pour te régler ton compte!
 game3_instr=Vite, tu dois fuir, sinon tu te feras percer!\nCette porte est verrouillée électroniquement. Pour la déverrouiller, fais tourner chaque case du labyrinthe pour connecter la batterie à la bonne serrure!\nChaque serrure est associée à une pratique à risque, ou non, tapes-dessus pour l'afficher. \n\nAttention: Seule une serrure marche. Tu dois trouver la pratique non à risque, les autres ne fonctionneront pas!
 game3_win=Félicitation, tu as réussis à t'enfuir! Tu as donc réussis la dernière épreuve! Eh oui, tout ceci n'était qu'une mise en scène et Thomas Godiva un complice. La maison s'excuse pour la frayeur occasionnée.
 game3_win_tom=Bravo ! Tiens, prends un chocolat pour te réconforter, en espérant que cela t'aides pour la prochaine épreuve.
 game3_loose=Malheureusement tu n'as pas réussi à t'enfuir...
+
+game4_diag1=Oh j'ai pu quitter cet endroit bizarre, mais où suis-je ? ... On dirait que je suis à l'arrière du bâtiment ...
+game4_diag2=Mais que se passe-t-il ici ? il y a plein d'IST qui n'arrêtent pas de se propager !
+game4_diag3=Ici c'est le territoire de mes amies les IST! Tout ce qui se passe ici favorise leur propagation. Observe de tes propre yeux comment ça se passe!
+game4_rules=Dans ce jeu tu incarnes une IST. Tu dois reconnaître les pratiques à risque qui t'aide à te propager.\nSélectionne l'IST qui t'intéresse, déplace-toi à l'aide des flèches, récolte les pratiques à risque qui favorisent ta transmission et évite les protections ainsi que les pratiques ne permettant pas à l'IST choisie de se propager.\n\nTu seras récompensé ou pénalisé en fonction de la pratique récoltée.
+game4_choose=Choisis ton IST !
 
 rules_title=REGLES
 
@@ -98,7 +111,7 @@ q1_question=Mireille color ?
 
 # PRACTICES
 safe1=Se faire tatouer
-safe2=Faire des\nmassages
+safe2=Masturbation en solitaire
 safe3=Se faire piquer\npar un moustique
 safe4=Embrasser\nquelqu'un
 safe5=Jouer à kapotopia
@@ -106,6 +119,7 @@ safe6=S'asseoir sur\nune planche de\ntoilette publique
 safe7=Boire dans\nle verre d'un inconnu
 safe8=Se faire\nvacciner
 safe9=Recevoir\nune transfusion sanguine
+safe10=Une branlette \nespagnole
 
 unsafe1=Une pénétration\nvaginale
 unsafe2=Une pénétration\nanale
@@ -120,16 +134,18 @@ unsafe10=Une éjaculation\nfaciale
 unsafe11=Un doigt\ndans le vagin
 unsafe12=Une éjaculation\nsur les organes\ngénitaux
 unsafe13=La position 69
+unsafe14=Se retirer \navant éjaculation
+mistake_msg=Mais vous avez des erreurs:
 
 # SYMPTOMS
-hiv_symp=Souvent asymptotique. Dans les autres cas, éruptions cutanées et/ou symptômes ressemblant à ceux de la grippe (fièvre, fatigue, ganglions gonflés, etc.) dans les premières semaines
+hiv_symp=Souvent asymptomatique. Dans les autres cas, éruptions cutanées et/ou symptômes ressemblant à ceux de la grippe (fièvre, fatigue, ganglions gonflés, etc.) dans les premières semaines
 c_hepatitis_symp=Fièvre, jaunisse, nausée, douleurs musculaires, fatigue (2 à 4 semaines après contamination)
-hpv_symp=Souvent asymptotique. Dans les autres cas, lésions précancéreuses très souvent indolores et/ou irritations, démangeaisons dues à l'apparition de verrues (appelées condylomes)
-gonorrhea_symp=Écoulement inhabituel (du pénis ou du vagin), irritation du pénis ou de la vulve, douleurs dans le bas-ventre, sensation de brûlure en urinant, douleur à la gorge et à l'anus.
-chlamydia_symp=Souvent asymptotique. Dans les autres cas, douleurs en urinant, au bas-ventre/à la gorge/à l'anus, écoulement inhabituel des parties génitales, saignements irréguliers.
+hpv_symp=Souvent asymptomatique. Dans les autres cas, lésions précancéreuses très souvent indolores et/ou irritations, démangeaisons dues à l'apparition de verrues (appelées condylomes)
+gonorrhea_symp=Ecoulement inhabituel (du pénis ou du vagin), irritation du pénis ou de la vulve, douleurs dans le bas-ventre, sensation de brûlure en urinant, douleur à la gorge et à l'anus.
+chlamydia_symp=Souvent asymptomatique. Dans les autres cas, douleurs en urinant, au bas-ventre/à la gorge/à l'anus, écoulement inhabituel des parties génitales, saignements irréguliers.
 herpes_symp=Cloches sur les organes génitaux ou l'anus, douleur en urinant (Généralement 2 à 20 jours après contamination, parfois quelques années). Très douloureux lors de la primo-infection.
 syphillis_symp=Chancre (ulcère ou plaie creuse) buccal, génital ou anal au stade précoce (peut passer inaperçu) et éruption cutanée.
-trichomonas_symp=Pertes vaginales odorantes et colorées, démangeaisons, sensation de brûlure en urinant. Symptômes fréquents au niveau vaginal (80% des cas) mais asymptotique dans 90% des cas au niveau du pénis.
+trichomonas_symp=Pertes vaginales odorantes et colorées, démangeaisons, sensation de brûlure en urinant. Symptômes fréquents au niveau vaginal (80% des cas) mais asymptomatique dans 90% des cas au niveau du pénis.
 chancreMou_symp=Ulcération de la peau avec l'apparition de lésions multiples. Gonflement des ganglions lymphatiques. Généralement beaucoup plus douloureux pour un pénis que pour une vulve.
 mycoplasmaGenitalium_symp=Souvent asymptomatique. Pertes vaginales, saignements inter-menstruels ou post-coïtaux pour une vulve. Douleurs en urinant, écoulement, infection de l'urètre pour un pénis.
 
@@ -163,24 +179,24 @@ conjonctivite_name=Conjonctivite
 mycose_name=Mycose
 
 # STI DESCRIPTIONS
-gonorrhee_descr=Bactérie le plus souvent sans symptômes. Quand elle est présente, on observe des écoulements (pénis ou vagin), des irritations et des brûlures en urinant. Elle mène à la stérilité.
-chlamydia_descr=Bactérie le plus souvent sans symptômes, elle se reconnait par des douleurs en urinant et des saignements irréguliers. Elle mène à des infections sérieuses et la stérilité.
-herpes_descr=Virus causant des boutons et lésions très douloureuses lors de la primo-infection. Il provoque des récidives plus ou moins fréquentes et importantes.
-vih_descr=Virus le plus souvent sans symptômes, avec parfois des symptômes grippaux lors des premières semaines. Il provoque des infections multiples liés à une baisse de l'immunité.
-papillomavirus_descr=Virus le plus souvent sans symptômes, avec parfois des lésions précancéreuses. Il peut causer des verrues génitales et des lésions pouvant évoluer en cancer.
-syphilis_descr=Bactérie pouvant causer des complications articulaires, cardiovasculaires et neurologiques. On la reconnait à cause de chancres buccaux, génital ou analet des éruptions cutanées.
-trichonomas_descr=Parasite causant des pertes vaginales odorantes et colorées. Sans symptômes dans 20% des cas au niveau vaginal, 90% au niveau du pénis. Facilite largement l'apparition d'autres IST.
-hepatiteA_descr=Virus le plus souvent sans symptôme, on en guérit naturellement dans la grande majorité des cas. Les autres évoluent en hépatites fulminantes (40% de mortalité).
-hepatiteB_descr=Virus le plus souvent sans symptômes, il peut causer une affection aiguë. Dans les cas chronique, il cause une maladie du foie, cirrhose, cancer et décès.
-hepatiteC_descr=Virus le plus souvent sans symptômes, elle se soigne naturellement dans une partie des cas, dans les cas chroniques, il y a maladie du foie, cirrhose, cancer et décès.
-chancremou_descr=Maladie causée par la bactérie du bacile de Ducrey, il provoque un chancre ulcéré ainsi que des gonflements de ganglions lymphatiques
-mycoplasmagenitalium_descr=Bactérie peu commune en Belgique, elle provoque l'apparition d'autres maladies infectieuses notamment pour les organes reproducteurs.
-gale_descr=Maladie de la peau causée par un parasite, il creuse des cavités sous la surface de la peau, dont il se nourrit, et y pond ses œufs. Sans grande gravité, elle est néanmoins très contagieuse.
-morpion_descr=Insecte parasite qui cible spécifiquement les poils du pubis. Il occasionne de fortes gênes et ses morsures favorisent les infections d'autres IST.
+gonorrhee_descr=Bactérie en général sans symptôme. S'il y en a, on observe des écoulements (pénis ou vagin), des irritations et des brûlures en urinant. Elle mène à la stérilité. On peut s'en protéger grâce à un préservatif externe ou interne ou un carré de latex en cas de pratique oral. Il est conseillé de se faire dépister régulièrement. Il consiste en un frottis vaginal, anal ou gorge et/ou un prélèvement urinaire.
+chlamydia_descr=Bactérie en général sans symptôme, elle se reconnait par des douleurs en urinant et des saignements irréguliers. Elle mène à des infections sérieuses et à la stérilité. On peut s'en protéger grâce à un préservatif externe ou interne ou un carré de latex en cas de pratique oral. Il est conseillé de se faire dépister régulièrement. Il consiste en un frottis vaginal, anal ou gorge et/ou un prélèvement urinaire.
+herpes_descr=Virus causant des boutons et lésions très douloureuses lors de la primo-infection. Il provoque des récidives plus ou moins fréquentes et importantes. Les préservatifs et carrés de latex permettent de s'en protéger partiellement, il faut éviter de toucher les lésions. Le dépistage nécessite un examen médicale. On le porte à vie une fois infecté.
+vih_descr=Virus le plus souvent sans symptôme, avec parfois des symptômes grippaux lors des premières semaines. Il provoque des infections multiples liées à une baisse de l'immunité. On peut s'en protéger grâce à un préservatif externe ou interne ou un carré de latex, il faut éviter le contact entre liquide contaminant, plaie ouverte, ou muqueuses. Le dépistage se fait via une prise de sang et un test rapide.
+papillomavirus_descr=Virus le plus souvent sans symptôme, avec parfois des lésions précancéreuses. Il peut causer des verrues génitales et des lésions pouvant évoluer en cancer. Le vaccin est conseillé à toutes, un préservatif et un carré de latex permmettent de réduire les risques mais ne sont pas suffisant. Le dépistage se fait par un examen  médical ou un frottis. Un examen tous les 3 ans est conseillé.
+syphilis_descr=Bactérie pouvant causer des complications articulaires, cardiovasculaires et neurologiques. On la reconnait à cause de chancres buccaux, génital ou anal et des éruptions cutanées. Si le chancre se trouve sur les parties génitals on peut s'en protéger avec un préservatif. Le dépistage se fait avec une prise de sang et un examen clinique.
+trichonomas_descr=Parasite causant des pertes vaginales odorantes et colorées. Sans symptômes dans 20% des cas au niveau vaginal, 90% au niveau du pénis. Facilite largement l'apparition d'autres IST. On peut s'en protéger grâce à un préservatif externe ou interne. Le dépistage se fait via un frottis vaginal ou de l'urêtre. Le traitement est à base d'antibiotique.
+hepatiteA_descr=Virus le plus souvent sans symptôme, on en guérit naturellement dans la grande majorité des cas. Les autres évoluent en hépatites fulminantes (40% de mortalité). Il existe un vaccin. Il faut éviter le contact de la bouche avec des matières fécales. Donc utiliser un carré de latex en cas d'anulingus. Le dépistage est fait via une prise de sang.
+hepatiteB_descr=Virus le plus souvent sans symptôme, il peut causer une affection aiguë. Dans les cas chronique, il cause une maladie du foie, cirrhose, cancer et décès. Il existe un vaccin. Il faut éviter le contact avec les matières fécales donc utiliser un préservatif ou un carré de latex en cas de pratique oral. Le dépistage est fait via une prise de sang. Il existe un traitement par prise oral.
+hepatiteC_descr=Virus le plus souvent sans symptôme, elle se soigne naturellement dans une partie des cas, dans les cas chroniques, il y a maladie du foie, cirrhose, cancer et décès. On s'en protège grâce à un préservatif externe ou interne ou un carré de latex. Dépisatge via prise de sang et TROD. Un traitement à base d'antivirus existe.
+chancremou_descr=Maladie causée par la bactérie du bacile de Ducrey, il provoque un chancre ulcéré ainsi que des gonflements de ganglions lymphatiques. Les préservatifs réduisent les risques de transmissions. Le dépistage doit passer par un examen clinique.
+mycoplasmagenitalium_descr=Bactérie peu commune en Belgique, elle provoque l'apparition d'autres maladies infectieuses notamment pour les organes reproducteurs. On peut s'en protéger grâce à l'utilisation de préservatifs. Le dépistage passe par un frottis vaginal, anal et de la gorge ou par un test d'urine.
+gale_descr=Maladie de la peau causée par un parasite, il creuse des cavités sous la surface de la peau, dont il se nourrit, et y pond ses oeufs. Sans grande gravité, elle est néanmoins très contagieuse. Eviter les contacts prolongé avec une personne contaminée ou ses vêtements est nécessaire pour s'en protéger. La gale est dépistée lors d'un examen médicale.
+morpion_descr=Insecte parasite qui cible spécifiquement les poils du pubis. Il occasionne de fortes gênes et ses morsures favorisent les infections d'autres IST. Se raser les poils pubiens empèche le développement des morpions. Leur présence est déterminée par un examen médicale ou un auto-examen.
 alternariose_descr=Série de maladies fongiques causant des brûlures à certains types de plantes, comme les tournesols, les tomates et les carottes. Elle peut être considérée comme une IST pour plante.
 froidepisse_descr=La chaude pisse est un synonyme de la gonorhée, en revanche la froide pisse est une maladie imaginaire.
-lycanthropie_descr=Comme dans la légende du lycanthrope, pour devenir un loup-garou un sim doit être mordu par un loup (chef de meute) pour devenir Loup-garou. Plus tard il peut également être mordu par un loup-garou pour être lui aussi atteint de lycanthropie.
-mononucleose_descr=La mononucléose infectieuse est la primo-infection symptomatique généralement bénigne, elle est provoquée par le virus d'Epstein-Barr, appartenant à la même famille de virus que l'Herpès. Près de 95% des adultes dans le monde l'ont déjà attrapé.
+lycanthropie_descr=Comme dans la légende du lycanthrope, pour devenir un loup-garou un sim doit être mordu par un loup alpha (chef de meute) pour devenir Loup-garou. Plus tard il peut également être mordu par un loup-garou pour être lui aussi atteint de lycanthropie.
+mononucleose_descr=La mononucléose infectieuse est la primo-infection symptomatique généralement bénigne, elle est provoquée par le virus d'Epstein-Barr, appartenant à la même famille de virus que l'Herpès. Près de 95% des adultes dans le monde l'ont déjà attrapée.
 depression_descr=La dépression est un trouble mental caractérisé par des épisodes de baisse d'humeur accompagnée d'une faible estime de soi et d'une perte de plaisir ou d'intérêt dans des activités habituellement agréables.
 tetanos_descr=Le tétanos est une infection locale provoquée par une bactérie, produisant une neurotoxine ciblant le système nerveux central. Cette toxine est l'un des plus puissants poisons biologiques connus et entraîne la mort dans 20 à 30% des cas.
 cancer_descr=C'est une maladie provoquée par la transformation de cellules qui deviennent anormales et prolifèrent de façon excessive.
